# DoubleLinkedList

./: .travis.yml  CMakeLists.txt  README.md
hw4_tests/: CMakeLists.txt
hw4_tests/basic_tests/: CMakeLists.txt
hw4_tests/constructor_tests_1/: CMakeLists.txt  constructor_tests.cpp
hw4_tests/copy_constructor_test_6/: CMakeLists.txt  copy_constructor_tests.cpp
hw4_tests/empty_tests_5/: CMakeLists.txt  is_empty_tests.cpp
hw4_tests/get_pointer_to_tests_7/: CMakeLists.txt  get_pointer_to_tests.cpp
hw4_tests/peek_tests_4/: CMakeLists.txt  peek_tests.cpp
hw4_tests/pop_from_stack_tests_3/: CMakeLists.txt  pop_tests.cpp
hw4_tests/push_to_stack_tests_2/: CMakeLists.txt  pust_tests.cpp
src/: CMakeLists.txt  DLinkedStack.hpp  Node.hpp
